--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                 a Data scientist 
                 & Story teller
                 based in Amsterdam.
-                wana fuck
+                wana fuck, yes or no ??
                 </h1>
 
                 <ul class="hero-social">
@@ -101,7 +101,7 @@
                         <a href="#0" title="">Githhub</a>
                     </li>
                     <li>
-                        <a href="#0" title="">Dribbble</a>
+                        <a href="#0" title="">what you mean no change</a>
                     </li>
                 </ul> <!-- end hero-social -->
 
