--- a/index.html
+++ b/index.html
@@ -91,6 +91,8 @@
                 & Story teller
                 based in Amsterdam.
                 wana fuck, yes or no ??
+                wh does it not work 
+                
                 </h1>
 
                 <ul class="hero-social">
