Change in details

--- a/index.html
+++ b/index.html
@@ -497,8 +497,8 @@
                     <h3 class="subhead">Get In Touch</h3>
 
                     <h1 class="display-1">
-                    Have an idea or a concept that really excite you?
-                    Let's turn that idea into reality. Shoot me a message.
+                    Did you find a amazing job opportunit? Then it is a perfect match 
+                    contact me
                     </h1>
                 </div>
 
@@ -514,7 +514,7 @@
                             Email
                         </h5>
                         <p class="footer-contact-block__content">
-                            <a href="mailto:#0">sayhello@ethos.com</a>
+                            <a href="mailto:#0">talktosahil17@gmail.com</a>
                         </p>
                     </div> <!-- end footer-contact-block -->
                     <div class="footer-contact-block" data-aos="fade-up">
@@ -522,7 +522,7 @@
                             Phone
                         </h5>
                         <p class="footer-contact-block__content">
-                            <a href="tel:+1975432345">+197 543 2345</a>
+                            <a href="tel:+1975432345">+31628344455</a>
                         </p>
                     </div> <!-- end footer-contact-block -->
                     <br>
