--- a/index.html
+++ b/index.html
@@ -368,12 +368,12 @@
                         </a>
                     </div>
                     <div class="folio-item__info">
-                        <div class="folio-item__cat">MAchine Learning</div>
-                        <h4 class="folio-item__title">Fighting Poverty</h4>
+                        <div class="folio-item__cat">Machine Learning</div>
+                        <h4 class="folio-item__title">Preficting food insecurity using machine learning models</h4>
                     </div>
                     <a href="https://www.behance.net/" title="Project Link" class="folio-item__project-link">Project Link</a>
                     <div class="folio-item__caption">
-                        <p>Vero molestiae sed aut natus excepturi. Et tempora numquam. Temporibus iusto quo.Unde dolorem corrupti neque nisi.</p>
+                        <p>Multiclass Classification with XGBoost for food insecurity prediction in Guatemala and El Salvador.</p>
                     </div>
                 </div>
             </div> <!-- end column -->
@@ -386,12 +386,12 @@
                         </a>
                     </div>
                     <div class="folio-item__info">
-                        <div class="folio-item__cat">Frontend Design</div>
+                        <div class="folio-item__cat">Recomendation system </div>
                         <h4 class="folio-item__title">Building Blocks</h4>
                     </div>
                     <a href="https://www.behance.net/" title="Project Link" class="folio-item__project-link">Project Link</a>
                     <div class="folio-item__caption">
-                        <p>Vero molestiae sed aut natus excepturi. Et tempora numquam. Temporibus iusto quo.Unde dolorem corrupti neque nisi.</p>
+                        <p>Build a machine learning Recomendation system and put it in production</p>
                     </div>
                 </div>
             </div> <!-- end column -->
@@ -404,8 +404,8 @@
                         </a>
                     </div>
                     <div class="folio-item__info">
-                        <div class="folio-item__cat">Branding</div>
-                        <h4 class="folio-item__title">Shout & Jump</h4>
+                        <div class="folio-item__cat">NLP</div>
+                        <h4 class="folio-item__title">Sentimental analysis on twitter datasets</h4>
                     </div>
                     <a href="https://www.behance.net/" title="Project Link" class="folio-item__project-link">Project Link</a>
                     <div class="folio-item__caption">
@@ -531,10 +531,7 @@
                             Social
                         </h5>
                         <ul class="footer-contact-block__list">
-                            <li><a href="#0">Twitter</a></li>
                             <li><a href="#0">Instagram</a></li>
-                            <li><a href="#0">Behance</a></li>
-                            <li><a href="#0">Dribbble</a></li>
                         </ul>
                     </div> <!-- end footer-contact-block -->
                 </div>
