--- a/index.html
+++ b/index.html
@@ -174,8 +174,8 @@
                         </div>
 
                         <p>
-                            • Analysis of high frequency data including data cleaning, feature extraction, time series analysis and prediction using python, SQL, Apache spark.<br>
-                            • Focus on sourcing, transformations, models and proxies, as well as the development of dashboard and data analytics tools.<br>
+                            <li>Analysis of high frequency data including data cleaning, feature extraction, time series analysis and prediction using python, SQL, Apache spark.<br></li>
+                            <LI>Focus on sourcing, transformations, models and proxies, as well as the development of dashboard and data analytics tools.<br></LI>
                         </p>
                     </div>
                 </div> <!-- end column -->
@@ -373,7 +373,11 @@
                     </div>
                     <a href="https://www.behance.net/" title="Project Link" class="folio-item__project-link">Project Link</a>
                     <div class="folio-item__caption">
-                        <p>Multiclass Classification with XGBoost for food insecurity prediction in Guatemala and El Salvador.</p>
+                        <p>
+                            <li>Multiclass <li>
+                            Multiclass</li>
+                            
+                            </p>
                     </div>
                 </div>
             </div> <!-- end column -->
